<resources xmlns:tools="http://schemas.android.com/tools">
    <plurals name="gv_analysis_pdf_pages">
        <item quantity="one">%d Seite</item>
        <item quantity="other">%d Seiten</item>
    </plurals>
    <string name="gv_title_camera">Dokument fotografieren</string>
    <string name="gv_title_onboarding">Anleitung</string>
    <string name="gv_title_review">Foto überprüfen</string>
    <string name="gv_title_help">Hilfe</string>
    <string name="gv_title_photo_tips">Tipps für Fotos</string>
    <string name="gv_title_supported_formats">Unterstützte Formate</string>
    <string name="gv_title_file_import">Dokumente aus anderen Apps öffnen</string>
    <string name="gv_title_analysis" />
    <string name="gv_title_return_assistant_help">Retourenassistent</string>
    <string name="gv_title_multi_page_review">Fotos überprüfen</string>
    <string name="gv_show_onboarding">Hilfe</string>
    <string name="gv_select_from_camera_roll">Eigenes Bild auswählen</string>
    <string name="gv_camera_error_no_permission">Um Dokumente zu fotografieren, erlaube Gini Pay den Zugriff auf die Kamera.</string>
    <string name="gv_camera_error_no_permission_button_title">Zugriff erlauben</string>
    <string name="gv_camera_image_stack_subtitle">Seiten</string>
    <string name="gv_camera_document_import_subtitle">Importieren</string>
    <string name="gv_document_error_multi_page_limit_review_pages_button">Seitenübersicht</string>
    <string name="gv_document_error_multi_page_limit_cancel_button">Abbrechen</string>
    <string name="gv_qrcode_detected_popup_message_1">QR verwenden?</string>
    <string name="gv_qrcode_detected_popup_message_2">Hier geht’s weiter.</string>
    <string name="gv_onboarding_lighting">Beim Abfotografieren der Rechnung oder des Überweisungsträgers auf gute Beleuchtung achten</string>
    <string name="gv_onboarding_flat">Seite glatt streichen</string>
    <string name="gv_onboarding_parallel">Gerät parallel über die Seite halten</string>
    <string name="gv_onboarding_align">Seite vollständig in den angezeigten Rahmen einpassen</string>
    <string name="gv_onboarding_multi_page">Jetzt ist es möglich, eine Rechnung mit mehreren Seiten zu analysieren!</string>
    <string name="gv_review_bottom_panel_text">Dokument vollständig, scharf und in Leserichtung fotografiert?\n\nDoppeltippen um Schärfe zu prüfen.</string>
    <string name="gv_multi_page_review_page_indicator" tools:ignore="PluralsCandidate">%1$d von %2$d</string>
    <string name="gv_multi_page_review_reorder_pages_tip"><![CDATA[Stimmt die Seitenreihenfolge? Mit Drag & Drop verschieben.]]></string>
    <string name="gv_multi_page_review_add_pages_subtitle">Seiten hinzufügen</string>
    <string name="gv_multi_page_review_image_preview_error">Vorschaubild ist leider nicht verfügbar.</string>
    <string name="gv_multi_page_review_delete_invalid_document">Löschen</string>
    <string name="gv_multi_page_review_file_import_delete_last_page_dialog_message">Möchten Sie das letzte Bild löschen?</string>
    <string name="gv_multi_page_review_file_import_delete_last_page_dialog_positive_button">Löschen</string>
    <string name="gv_multi_page_review_file_import_delete_last_page_dialog_negative_button">Abbrechen</string>
    <string name="gv_document_analysis_error">Ein Fehler ist aufgetreten.</string>
    <string name="gv_document_analysis_error_retry">Wiederholen</string>
    <string name="gv_analysis_activity_indicator_message">Dokument wird analysiert</string>
    <string name="gv_photo_tip_align">Seite vollständig in den angezeigten Rahmen einpassen</string>
    <string name="gv_photo_tip_multipage">Jetzt ist es möglich, eine Rechnung mit mehreren Seiten zu analysieren</string>
    <string name="gv_photo_tip_lighting">Auf gute Beleuchtung achten</string>
    <string name="gv_photo_tip_parallel">Gerät parallel über die Seite halten</string>
    <string name="gv_photo_tip_flat">Seite glatt streichen</string>
    <string name="gv_noresults_header">Es konnten keine Daten ausgelesen werden. Bitte Aufnahme wiederholen.</string>
    <string name="gv_noresults_headline">Tipps für beste Ergebnisse:</string>
    <string name="gv_noresults_back_button">Zur Kamera</string>
    <string name="gv_document_import_hint_text">Es können jetzt auch ganz einfach Dateien hochgeladen werden.</string>
    <string name="gv_document_import_error">Ihre Datei konnte nicht geöffnet werden. Bitte versuchen sie es mit einer anderen Datei.</string>
    <string name="gv_storage_permission_denied">Nur mit Datei-Zugriff können gespeicherte Rechnungen hochgeladen werden.</string>
    <string name="gv_storage_permission_denied_positive_button">Zugriff erteilen</string>
    <string name="gv_storage_permission_denied_negative_button">Abbrechen</string>
    <string name="gv_storage_permission_rationale">Um gespeicherte Bilder oder PDFs zu analysieren, wird Datei-Zugriff auf dem Gerät benötigt.</string>
    <string name="gv_storage_permission_rationale_positive_button">Zugriff erteilen</string>
    <string name="gv_storage_permission_rationale_negative_button">Abbrechen</string>
    <string name="gv_analysis_pdf_default_title">PDF Dokument</string>
    <string name="gv_analysis_hint_headline">Für schnellere Ergebnisse, bitte:</string>
    <string name="gv_document_import_invalid_document">Leider kann diese Datei nicht bearbeitet werden.</string>
    <string name="gv_document_import_error_type_not_supported">Nur Dateien vom Format jpg, png, gif oder pdf können analysiert werden.</string>
    <string name="gv_document_import_error_size_too_large">Diese Datei ist leider zu groß.</string>
    <string name="gv_document_import_error_too_many_pdf_pages">Das Dokument darf nicht mehr als 10 Seiten haben.</string>
    <string name="gv_document_import_error_password_protected_pdf">Passwortgeschützte Dokumente können nicht analysiert werden.</string>
    <string name="gv_document_error_too_many_pages">Das Dokument darf nicht mehr als 10 Seiten haben.</string>
    <string name="gv_document_import_pick_another_document">Auswahl ändern</string>
    <string name="gv_document_import_close_error">Abbrechen</string>
    <string name="gv_file_chooser_fotos_section_header">Fotos</string>
    <string name="gv_file_chooser_pdfs_section_header">PDF</string>
    <string name="gv_help_item_photo_tips_title">Tipps für beste Ergebnisse aus Fotos</string>
    <string name="gv_help_item_file_import_guide_title">Dokumente aus anderen Apps öffnen</string>
    <string name="gv_help_item_supported_formats_title">Unterstützte Formate</string>
    <string name="gv_help_item_return_assistant_title">Retourenassistent</string>
    <string name="gv_photo_tips_headline">Zur Erkennung aller Daten bitte folgende Tipps beim Abfotografieren beachten:</string>
    <string name="gv_photo_tips_camera_button">Zur Kamera</string>
    <string name="gv_supported_format_printed_invoices">Computer-erstellte Überweisungsträger und Rechnungen</string>
    <string name="gv_supported_format_single_page_as_jpeg_png_gif">Einseitige Bilder im jpeg, png oder gif Format</string>
    <string name="gv_supported_format_pdf">PDF Dokumente von bis zu 10 Seiten</string>
    <string name="gv_unsupported_format_handwriting">Handschrift</string>
    <string name="gv_unsupported_format_photos_of_screens">Fotos von Bildschirmen</string>
    <string name="gv_supported_format_section_header">Folgende Formate werden unterstützt:</string>
    <string name="gv_unsupported_format_section_header">Was nicht analysiert wird:</string>
    <string name="gv_file_import_header"><![CDATA[Digitale Rechnungen können nun noch komfortabler beglichen werden: Senden Sie einfach Ihre Rechnung als PDF direkt an Ihre <Partner App Name>. Diese wird automatisch für die Überweisung analysiert.]]></string>
    <string name="gv_file_import_section_1_title">Wählen Sie bitte eine Rechnung aus</string>
    <string name="gv_file_import_section_1_body">Bitte wählen Sie hierfür auf Ihrem Smartphone die Rechnung als PDF innerhalb einer Email-App, eines PDF-Viewers oder einer anderen App aus.</string>
    <string name="gv_file_import_section_2_title">Aktivieren Sie die Senden-Funktion</string>
    <string name="gv_file_import_section_2_body"><![CDATA[Um die Datei an die <Partner App Name> weiterzuleiten, verwenden Sie eine Funktion wie “Öffnen mit...”, “Datei senden...”, oder “Teilen”. Die “Teilen”-Funktion wird oft grafisch als drei Punkte, die mit zwei Linien verbunden sind, dargestellt.\n\nDiese Funktionen können üblicherweise entweder im Overflow-Menü (drei Punkte oben rechts) oder in einer Funktionsleiste am unteren App-Rand gefunden werden. In manchen Email-Apps wird die Funktion in der Nähe des PDF-Anhangs vor dem Öffnen der Datei angezeigt.]]></string>
    <string name="gv_file_import_section_3_title"><![CDATA[Wählen Sie die <Partner App Name> als Ziel aus]]></string>
    <string name="gv_file_import_section_3_body"><![CDATA[Beim Aktivieren dieser Funktionen werden Apps angezeigt, an die eine PDF-Datei weitergeleitet werden kann. Bitte wählen Sie die <Partner App Name> aus der Liste aus, um den Analyse- und Überweisungsprozess zu starten.]]></string>
    <string name="gv_file_import_section_3_body_2"><![CDATA[Bitte verwenden Sie die Option “NUR DIESMAL” um zu vermeiden, dass die <Partner App Name> alle PDFs standardmäßig öffnet.]]></string>
    <string name="gv_file_import_section_3_clear_app_defaults_title">Einstellung für Standard-App löschen</string>
    <string name="gv_digital_invoice_scan_success">Scan war erfolgreich!\nDu kannst nun die Artikel abwählen, die du zurückschicken willst.</string>
    <string name="gv_digital_invoice_items">Artikel</string>
    <string name="gv_digital_invoice_what_is_this_button">Was ist das?</string>
    <string name="gv_digital_invoice_line_item_details_description_label">Artikelname</string>
    <string name="gv_digital_invoice_line_item_details_quantity_label">Anzahl</string>
    <string name="gv_digital_invoice_line_item_details_gross_price_label">Artikelpreis</string>
    <string name="gv_digital_invoice_line_item_details_total_label">Total:</string>
    <string name="gv_digital_invoice_line_item_details_save">Speichern</string>
    <string name="gv_return_assistant_help_title">Der neue Retourenassistent</string>
    <string name="gv_return_assistant_help_section_1_body_1">Nachdem Sie eine Rechnung abfotografiert haben, können Sie nun Rechnungsposten abwählen die Sie nicht möchten. Sie bezahlen nur für die Dinge die Sie behalten und können den Rest retournieren.</string>
    <string name="gv_return_assistant_help_section_1_body_2">Wenn Sie auf die Edit Schaltfläche des Rechnungspostens drücken, können Sie die Anzahl verändern, sowie den Preis korrigieren.</string>
    <string name="gv_return_assistant_help_section_2_title">Anzahl ändern</string>
    <string name="gv_return_assistant_help_section_2_body">Wenn Sie auf die Edit Schaltfläche des Rechnungspostens drücken, können Sie die Anzahl verändern, sowie den Preis korrigieren.</string>
    <string name="gv_return_assistant_help_section_3_body">Sollte der Preis mal nicht perfekt ausgelesen worden sein, können Sie diesen einfach manuell korrigieren. Der Gesamtpreis aktualisiert sich automatisch.</string>
    <string name="gv_return_assistant_help_section_3_title">Preis korrigieren</string>
    <string name="gv_return_assistant_help_back_button_title">Zurück</string>
</resources>