<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/gv_digital_invoice_line_item_details_padding"
    tools:context=".digitalinvoice.details.LineItemDetailsFragment">

    <CheckBox
        android:id="@+id/gv_checkbox"
        style="@style/GiniVisionTheme.DigitalInvoice.LineItemDetails.Checkbox.TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/gv_digital_invoice_line_item_details_checkbox_margin_bottom"
        tools:text="1 item selected" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/gv_description_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gv_checkbox"
        android:layout_marginBottom="@dimen/gv_digital_invoice_line_item_details_description_margin_bottom"
        android:textColorHint="@color/gv_digital_invoice_line_item_details_input_field_hint_text"
        app:hintTextColor="@color/gv_digital_invoice_line_item_details_input_field_hint_text"
        app:boxBackgroundColor="@android:color/transparent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/gv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gv_digital_invoice_line_item_details_description_label"
            android:inputType="text"
            android:nextFocusDown="@id/gv_quantity"
            android:textAppearance="@style/GiniVisionTheme.DigitalInvoice.LineItemDetails.InputField.TextStyle"
            tools:text="Nike Sportswear Air Max 97 - Sneaker Low" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/gv_quantity_and_gross_price_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gv_description_container"
        android:layout_marginBottom="@dimen/gv_digital_invoice_line_item_details_quantity_and_gross_price_margin_bottom"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gv_quantity_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColorHint="@color/gv_digital_invoice_line_item_details_input_field_hint_text"
            app:hintTextColor="@color/gv_digital_invoice_line_item_details_input_field_hint_text"
            app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/gv_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gv_digital_invoice_line_item_details_quantity_label"
                android:inputType="number"
                android:nextFocusDown="@id/gv_gross_price"
                android:selectAllOnFocus="true"
                android:textAppearance="@style/GiniVisionTheme.DigitalInvoice.LineItemDetails.InputField.TextStyle"
                tools:text="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/gv_multiplier"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="16dp"
            android:text="X"
            android:textColor="#000"
            android:textSize="14sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/gv_currency"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="-12dp"
            android:background="@color/gv_digital_invoice_activity_background"
            android:gravity="bottom"
            android:paddingBottom="8dp"
            android:text="€"
            android:textAppearance="@style/GiniVisionTheme.DigitalInvoice.LineItemDetails.InputField.TextStyle"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gv_gross_price_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:hintTextColor="@color/gv_digital_invoice_line_item_details_input_field_hint_text"
            android:textColorHint="@color/gv_digital_invoice_line_item_details_input_field_hint_text"
            app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/gv_gross_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789,."
                android:gravity="end"
                android:hint="@string/gv_digital_invoice_line_item_details_gross_price_label"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:background="@android:color/transparent"
                android:textAppearance="@style/GiniVisionTheme.DigitalInvoice.LineItemDetails.InputField.TextStyle"
                tools:text="152.95" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gv_quantity_and_gross_price_container"
        android:layout_alignTop="@id/gv_gross_price_total_integral_part"
        android:layout_alignBottom="@id/gv_gross_price_total_integral_part"
        android:layout_marginEnd="@dimen/gv_digital_invoice_line_item_details_total_label_margin_end"
        android:layout_toStartOf="@id/gv_gross_price_total_integral_part"
        android:gravity="center"
        android:text="@string/gv_digital_invoice_line_item_details_total_label"
        android:textAppearance="@style/GiniVisionTheme.DigitalInvoice.LineItemDetails.Total.TextStyle" />

    <TextView
        android:id="@+id/gv_gross_price_total_integral_part"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gv_quantity_and_gross_price_container"
        android:layout_marginBottom="@dimen/gv_digital_invoice_line_item_details_gross_price_margin_bottom"
        android:layout_toStartOf="@+id/gv_gross_price_total_fractional_part"
        android:includeFontPadding="false"
        android:textAppearance="@style/GiniVisionTheme.DigitalInvoice.TotalGrossPrice.Integral.TextStyle"
        tools:text="€0" />

    <TextView
        android:id="@+id/gv_gross_price_total_fractional_part"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/gv_gross_price_total_integral_part"
        android:layout_alignParentEnd="true"
        android:textAppearance="@style/GiniVisionTheme.DigitalInvoice.TotalGrossPrice.Fractional.TextStyle"
        tools:text=".00" />

    <Button
        android:id="@+id/gv_save_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/gv_digital_invoice_line_item_details_save_button_height"
        android:layout_alignParentBottom="true"
        android:text="@string/gv_digital_invoice_line_item_details_save"
        app:backgroundTint="@color/gv_digital_invoice_line_item_details_save_button" />

</RelativeLayout>